# libvcetoy

./: LICENSE  README.md  meson.build
include/util/: util.h
include/vcetoy/: hello.h  vcetoy.h  vulkan.h
libs/: meson.build
libs/minivk/: meson.build
libs/minivk/include/: vkextensionfn.h
libs/minivk/include/minivk/: MiniVk.h  SdlWindow.h
libs/minivk/src/: MiniVk.cpp  SdlWindow.cpp
libs/vktools/: meson.build
libs/vktools/src/: VulkanTools.cpp
src/: Drm.cpp  Drm.h  MiniVk.cpp  MiniVk.h  SdlWindow.cpp  SdlWindow.h  VcetBo.cpp  VcetBo.h  VcetContext.cpp  VcetContext.h  VcetIb.cpp  VcetIb.h  VcetJob.cpp  VcetJob.h  cli.cpp  entrypoints.cpp  hello.cpp  meson.build  vkextensionfn.h
test/: meson.build  test.cpp  test_image.h
test/frames/: meson.build
