# Copyright (C) 2018  Valve Corporation.

# This file is part of libvcetoy.

# libvcetoy is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 2 of the License, or
# (at your option) any later version.

# libvcetoy is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with libvcetoy.  If not, see <http://www.gnu.org/licenses/>.

configure_file( input: '001.bmp', output: '001.bmp', copy: true )
configure_file( input: '002.bmp', output: '002.bmp', copy: true )
configure_file( input: '003.bmp', output: '003.bmp', copy: true )
configure_file( input: 'pattern.bmp', output: 'pattern.bmp', copy: true )
